force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>Tasks client gives to company and developers do it. Task may consist of many devs. Same - one dev may be assigned to couple of projects at the same time.</description>
    <label>Project</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>