force-app/main/default/objects/Project__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>defines if the project is active</description>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>