force-app/main/default/objects/Project__c/fields/Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Is_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>defines if the project is billable (it happens)</description>
    <label>Is Billable?</label>
    <type>Checkbox</type>
</CustomField>