force-app/main/default/objects/Project__c/validationRules/Project_Budget_should_be_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Budget_should_be_populated</fullName>
    <active>true</active>
    <description>Project Budget should be populated if Is Billable = true</description>
    <errorConditionFormula>(Is_Billable__c==true)&amp;&amp;( ISBLANK(Project_Budget__c)||(Project_Budget__c&lt;=0))</errorConditionFormula>
    <errorDisplayField>Project_Budget__c</errorDisplayField>
    <errorMessage>Project Budget should be populated if Is Billable = true</errorMessage>
</ValidationRule>