force-app/main/default/objects/Project__c/validationRules/Start_Date_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Future</fullName>
    <active>true</active>
    <description>should be in the future for new Project (only on create)</description>
    <errorConditionFormula>Start_Date__c &lt; TODAY()&amp;&amp;(ISBLANK(Id))</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date should be in the future for new Project (only on create)</errorMessage>
</ValidationRule>